fixed header position and aligned

--- a/src/main.css
+++ b/src/main.css
@@ -2,6 +2,11 @@
   text-align: center;
   padding: 30px;
   border-bottom: 1px solid #919191;
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  z-index: 2;
+  background: #ffffff;
 }
 
 .sidebar {
@@ -9,11 +14,11 @@
   width: 160px;
   position: fixed;
   z-index: 1;
-  /* top: 0; */
+  top: 146px;
   left: 0;
   /* background-color: #111111; */
   overflow: hidden;
-  padding-top: 20px;
+  /* padding-top: 20px; */
   border-right: 1px solid #919191;
 }
 
@@ -30,4 +35,6 @@
 
 .main {
   margin-left: 165px;
+  position: relative;
+  top: 157px;
 }
